# medical-records-system-userver

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  docker-compose.yaml  run_as_user.sh  test_api_userver.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yaml
cmake/: get_cpm.cmake
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
src/: greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  main.cpp
src/dto/: DTOs.h
src/handlers/: health_handler.cpp  health_handler.hpp  login_handler.cpp  login_handler.hpp  patient_handler.cpp  patient_handler.hpp  record_handler.cpp  record_handler.hpp  register_handler.cpp  register_handler.hpp
src/models/: IRepository.h  MedicalRecord.h  Patient.h  User.h  ValueObjects.h
src/repositories/: InMemoryMedicalRecordRepository.cpp  InMemoryMedicalRecordRepository.h  InMemoryPatientRepository.cpp  InMemoryPatientRepository.h  InMemoryUserRepository.cpp  InMemoryUserRepository.h  RepositoryFactory.h
src/services/: AuthService.cpp  AuthService.h  JWTService.cpp  JWTService.h  MedicalRecordService.cpp  MedicalRecordService.h  PasswordHasher.cpp  PasswordHasher.h  PatientService.cpp  PatientService.h  UserService.cpp  UserService.h
tests/: conftest.py
